# p-linear

./: .gitignore  LICENSE  pyproject.toml
data/: __init__.py  llm_label_pipeline.py
model/: Cargo.toml  package.json
model/src/: lib.rs
train/: __init__.py  evaluate_p_linear.py  generate_weights.py  train_p_linear.py
