[project]
name = "p-linear"
version = "0.1.0"
description = "Lightweight query-gating model that predicts routing signals from user query"
authors = [
    {name = "abdfnx"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "huggingface-hub (>=1.2.2,<2.0.0)",
    "datasets (>=4.4.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
